--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.7.0",
+        "realrashid/sweet-alert": "^7.3",
         "spatie/laravel-permission": "^6.18"
     },
     "require-dev": {
