--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "alpinejs": "^3.14.9",
+        "sweetalert": "^2.1.2",
         "sweetalert2": "^11.22.0"
     }
 }
